--- a/src/main/resources/static/css/default.scss
+++ b/src/main/resources/static/css/default.scss
@@ -16,7 +16,7 @@
 @import 'pages/cart';
 @import 'pages/findId';
 @import 'pages/findPass';
-@import 'pages/index';
+@import 'pages/main';
 @import 'pages/item';
 @import 'pages/login';
 @import 'pages/mypage';
