--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -217,13 +217,12 @@
             <section>
                 <div class="container">
                     <div class="add_item_header">
-                        <h2 th:if="${formActionParam == 'new'}">상품 등록</h2>
-                        <h2 th:if="${formActionParam != 'new'}">상품 수정</h2>
+                        <h2 th:if="${formActionParam == ''}">상품 등록</h2>
+                        <h2 th:if="${formActionParam != ''}">상품 수정</h2>
                         <div class="divider"></div>
                     </div>
                     <div class="add_item_body mt-5">
-                        <form id="itemFormDto" th:action="@{/admin/item/{pathParam}(pathParam=${formActionParam})}"
-                            th:object="${itemFormDto}" method="post" enctype="multipart/form-data">
+                        <form id="itemFormDto" th:action="@{'/admin/item/' + ${formActionParam}}" th:object="${itemFormDto}" method="post" enctype="multipart/form-data">
                             <table style="table-layout: fixed !important;">
                                 <colgroup>
                                     <col style="width:20%;">
