--- a/src/main/resources/templates/item/itemMng.html
+++ b/src/main/resources/templates/item/itemMng.html
@@ -55,18 +55,18 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr th:each="item, status: ${items.getContent()}" >
+                                        <tr th:each="item, status: ${items.getContent()}">
                                             <td
                                                 th:text="${items.getTotalElements() - (items.getSize() * items.getNumber()) - status.index}">
                                             </td>
                                             <td>
                                                 <a th:href="'/admin/item/'+${item.id}" th:text="${item.itemNm}"></a>
                                             </td>
-                                            <td
-                                                th:text="${item.itemSellStatus == sellStatus} ? '판매' : '품절'">
+                                            <td th:text="${item.itemSellStatus == sellStatus} ? '판매' : '품절'">
                                             </td>
                                             <td th:text="${item.createdBy}"></td>
-                                            <td th:text="${item.regTime}"></td>
+                                            <td th:text="${#temporals.format(item.regTime, 'yyyy-MM-dd HH:mm:ss')}">
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
