[FEAT] - 아이템 상세 화면 구현

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -66,8 +66,7 @@
                                                 <a>[[${item.itemNm}]]</a>
                                             </div>
                                             <div class="price">
-                                                <span
-                                                    th:text="|${#numbers.formatInteger(item.price, 0, 'COMMA')}원|"></span>
+                                                <span th:text="|${#numbers.formatInteger(item.price, 0, 'COMMA')}원|"></span>
                                             </div>
                                         </div>
                                     </div>
