--- a/src/main/resources/static/css/default.css
+++ b/src/main/resources/static/css/default.css
@@ -1255,7 +1255,6 @@ footer .footer_copyright {
   font-size: 25px;
   color: #333;
   margin: 5px 5px 0 0;
-  border: none;
 }
 #items .items_body .search_result .content_count {
   font-size: 12px;
@@ -2136,4 +2135,247 @@ footer .footer_copyright {
   .signup_body form table colgroup col:nth-child(1) {
     width: 25% !important;
   }
+}
+.item_dtl_header h2 {
+  font-size: 15px;
+  text-align: center;
+}
+.item_dtl_header .divider {
+  width: 70px;
+  height: 1px;
+  background: #aaa;
+  margin: 20px auto;
+}
+
+.item_dtl_body {
+  margin: 0 auto;
+}
+.item_dtl_body .img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.item_dtl_body .img .item-small-img img {
+  height: 95px;
+  margin: 10px 0;
+  cursor: pointer;
+  display: block;
+  opacity: 0.6;
+}
+.item_dtl_body .img .item-small-img img:hover {
+  opacity: 1;
+}
+.item_dtl_body .img .img-container {
+  padding: 10px;
+}
+.item_dtl_body .img .img-container img {
+  height: 515px;
+}
+.item_dtl_body .info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 20px 20px;
+  min-width: 350px;
+}
+.item_dtl_body .info .item_title {
+  margin-bottom: 20px;
+}
+.item_dtl_body .info .item_title h3 {
+  font-size: 17px;
+  font-weight: bold;
+}
+.item_dtl_body .info .item_desc {
+  margin-bottom: 20px;
+}
+.item_dtl_body .info .item_desc p {
+  font-size: 14px;
+}
+.item_dtl_body .info .item_price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.item_dtl_body .info .item_price .title {
+  display: inline-block;
+  width: 20%;
+  margin: 7px 20px 7px 0;
+  vertical-align: middle;
+  font-size: 11px;
+}
+.item_dtl_body .info .item_price .title span {
+  font-size: 12px;
+  color: #555555;
+}
+.item_dtl_body .info .item_price .con {
+  display: inline-block;
+  width: auto;
+  margin: 7px 20px 7px 0;
+  vertical-align: middle;
+  font-size: 11px;
+}
+.item_dtl_body .info .item_price .con span {
+  font-size: 14px;
+  font-weight: bold;
+}
+.item_dtl_body .info .total_price {
+  margin: 0;
+  padding: 25px 4px 25px;
+  color: #333;
+  border-top: 1px solid #ddd;
+  vertical-align: middle;
+  background: #fff;
+  text-align: right;
+}
+.item_dtl_body .info .total_price span {
+  font-size: 12px;
+  color: #000;
+}
+.item_dtl_body .info .total_price span strong em {
+  font-style: normal;
+  font-size: 17px;
+  padding: 0 5px 0 20px;
+}
+.item_dtl_body .info .item_option {
+  font-size: 12px;
+}
+.item_dtl_body .info .item_option .item_color {
+  margin: 15px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.item_dtl_body .info .item_option .item_color .title {
+  display: inline-block;
+  width: 25%;
+}
+.item_dtl_body .info .item_option .item_color .con {
+  display: inline-block;
+  width: auto;
+}
+.item_dtl_body .info .item_option .item_color .con select {
+  height: 20px;
+  line-height: 20px;
+  border: 1px solid #CCCCCC;
+  padding-left: 2px;
+  border-radius: 2px;
+}
+.item_dtl_body .info .item_option .item_size {
+  margin: 15px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.item_dtl_body .info .item_option .item_size .title {
+  display: inline-block;
+  width: 25%;
+}
+.item_dtl_body .info .item_option .item_size .con {
+  display: inline-block;
+  width: auto;
+}
+.item_dtl_body .info .item_option .item_size .con select {
+  height: 20px;
+  line-height: 20px;
+  border: 1px solid #CCCCCC;
+  padding-left: 2px;
+  border-radius: 2px;
+}
+.item_dtl_body .info .item_option .item_cnt {
+  margin: 15px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.item_dtl_body .info .item_option .item_cnt .title {
+  display: inline-block;
+  width: 25%;
+}
+.item_dtl_body .info .item_option .item_cnt .con {
+  display: inline-block;
+  vertical-align: middle;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.item_dtl_body .info .item_option .item_cnt .con input {
+  width: 30px;
+  height: 20px;
+  line-height: 20px;
+  border: 1px solid #CCCCCC;
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
+  padding-left: 2px;
+}
+.item_dtl_body .info .item_option .item_cnt .con .cnt_btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.item_dtl_body .info .item_option .item_cnt .con .cnt_btn i {
+  background: transparent;
+  outline: none;
+  border: 1px solid #CCCCCC;
+  width: 20px;
+  height: 10px;
+  text-align: center;
+  vertical-align: middle;
+  border-top-right-radius: 2px;
+  border-bottom-right-radius: 2px;
+  border-left: none;
+  cursor: pointer;
+}
+.item_dtl_body .info .item_option .item_cnt .con .cnt_btn i::before {
+  font-size: 10px;
+  vertical-align: top;
+}
+.item_dtl_body .info .btn_inner .buy_btn button {
+  display: inline-block;
+  border: 1px solid transparent;
+  border-radius: 0;
+  line-height: 18px;
+  vertical-align: middle;
+  word-spacing: -0.5px;
+  text-align: center;
+  color: #fff;
+  background-color: #151515;
+  width: 100%;
+  padding: 14px;
+  font-size: 12px;
+  letter-spacing: 1px;
+}
+.item_dtl_body .info .btn_inner .cart_btn button {
+  display: inline-block;
+  border: 1px solid #e2e2e2;
+  border-radius: 0;
+  line-height: 18px;
+  vertical-align: middle;
+  word-spacing: -0.5px;
+  text-align: center;
+  color: #000;
+  background-color: #fff;
+  width: 100%;
+  padding: 14px;
+  font-size: 12px;
+  letter-spacing: 1px;
 }
