--- a/src/main/resources/templates/admin/item/itemMng.html
+++ b/src/main/resources/templates/admin/item/itemMng.html
@@ -126,7 +126,7 @@
                                     <input class="search_query" th:field="*{searchQuery}" type="text"
                                         placeholder="검색어를 입력해주세요">
                                     <button class="search_btn black_btn_w90_h40" type="submit">검색</button>
-                                    <a class="white_btn_w90_h40 ms-2" th:href="@{/admin/item}">상품 등록</a>
+                                    <a class="white_btn_w90_h40 ms-2" th:href="@{/templates/admin/item}">상품 등록</a>
                                 </div>
                             </form>
                         </div>
