--- a/src/main/resources/static/css/pages/_itemDtl.scss
+++ b/src/main/resources/static/css/pages/_itemDtl.scss
@@ -17,29 +17,27 @@
 
     .img {
         display: flex;
+        flex-direction: column;
 
-        .item-small-img {
+        .main_img_box {
+            margin-bottom: 5px;
 
-            img {
-                height: 95px;
-                margin: 10px 0;
-                cursor: pointer;
-                display: block;
-                opacity: 0.6;
-            }
-
-            img:hover {
-                opacity: 1;
+            .main_img {
+                height: 576px;
+                width: 432px;
             }
         }
 
+        .thumb_img_box {
+            .thumb_img {
+                height: 125px;
+                width: 95px;
+                opacity: 0.6;
+                cursor: pointer;
 
-
-        .img-container {
-            padding: 10px;
-
-            img {
-                height: 515px;
+                &:hover {
+                    opacity: 1;
+                }
             }
         }
     }
@@ -48,7 +46,7 @@
         display: flex;
         flex-direction: column;
         padding: 20px 20px;
-        min-width: 350px;
+        min-width: 400px;
 
         .item_title {
             margin-bottom: 20px;
